--- a/src/themes/topsoil.less
+++ b/src/themes/topsoil.less
@@ -5,4 +5,7 @@
 @import 'topsoil/layout';
 @import 'topsoil/components/table';
 // @import 'topsoil/components/form';
+@import 'topsoil/components/swatches';
 @import 'topsoil/theme';
+
+
