--- a/src/themes/topsoil/components/app-bar.less
+++ b/src/themes/topsoil/components/app-bar.less
@@ -27,7 +27,7 @@ action-bar
 
 .action-bar() {
   * {
-    font-size: 1.9rem; 
+    font-size: 1.5rem; 
     line-height: 1.5;
     display: inline-block;
     margin-top: 0;
@@ -42,28 +42,6 @@ action-bar
   nav, 
   menu {
     .actions-area;
-  }
-
-  .button, 
-  button,
-  input[type="submit"],
-  input[type="reset"],
-  input[type="button"],
-  input[type="date"],
-  input[type="time"],
-  input[type="datetime"],
-  input[type="email"],
-  input[type="number"],
-  input[type="search"],
-  input[type="text"],
-  input[type="tel"],
-  input[type="url"],
-  input[type="password"]
-  select {
-    margin: 0;
-    height: 2rem;
-    padding: 0 0.3rem;
-    width: inherit;
   }
 
   a {
@@ -98,10 +76,10 @@ action-bar
   
   float: right;
 
-  * {
-    font-size: 1.3rem;
-    line-height: 1rem;
-  }
+  // * {
+  //   font-size: 1.3rem;
+  //   line-height: 1rem;
+  // }
 
   ul, li {
     list-style: none;
