--- a/src/themes/topsoil/variables.less
+++ b/src/themes/topsoil/variables.less
@@ -19,38 +19,37 @@ VARIABLES
 @canvas-color: #FFFFFF;             
 
 // brand
-@primary-color: #455A64;
-@primary-color--loud: darken(@primary-color, 20%);
-@primary-color--subtle: lighten(@primary-color, 10%);
-@primary-color--muted: lighten(@primary-color, 20%);
+// @primary-color: #455A64;
+@primary-color: #607D8B;
+@primary-color--dark: darken(@primary-color, 15%);
+@primary-color--light: lighten(@primary-color, 20%);
+@primary-color--muted: lighten(@primary-color, 40%);
 
-@complementary-color: #247BA0;
-@complementary-color--loud: darken(@complementary-color, 20%);
-@complementary-color--subtle: lighten(@complementary-color, 80%);
-@complementary-color--muted: lighten(@complementary-color, 90%);
+@complementary-color: #455A64;
+@complementary-color--dark: darken(@complementary-color, 15%);
+@complementary-color--light: lighten(@complementary-color, 20%);
+@complementary-color--muted: lighten(@complementary-color, 50%);
 
 // highlighed/accented content
-@accent-color: #3b8bba;
-@accent-color--loud: darken(@accent-color, 10%);
-@accent-color--subtle: lighten(@accent-color, 10%);
-@accent-color--muted: lighten(@accent-color, 30%);
+@accent-color: #03A9F4;
+@accent-color--dark: darken(@accent-color, 15%);
+@accent-color--light: lighten(@accent-color, 20%);
+@accent-color--muted: lighten(@accent-color, 50%);
 
 // call to action
-@positive-accent-color: @accent-color--loud;
+@positive-accent-color: @accent-color--dark;
 
 // call to action (but with caveat: e.g. delete)
 @negative-accent-color: #B2415C;
 
 // text content
 @text-color: #333;
-@text-color--primary: @text-color;
-@text-color--secondary: lighten(@text-color, 23%);
-@text-color--subtle: lighten(@text-color, 80%);
+@text-color--secondary: lighten(@text-color, 30%);
+@text-color--subtle: lighten(@text-color, 50%);
 
 @alt-text-color: #fff;
-@alt-text-color--primary: @alt-text-color;
-@alt-text-color--secondary: darken(@alt-text-color, 10%);
-@alt-text-color--subtle: darken(@alt-text-color, 20%);
+@alt-text-color--secondary: darken(@alt-text-color, 20%);
+@alt-text-color--subtle: darken(@alt-text-color, 50%);
 
 @link-color: @accent-color;
 @link-color--active: darken(@link-color, 20%);
