--- a/src/themes/topsoil/components/navigation-drawer.less
+++ b/src/themes/topsoil/components/navigation-drawer.less
@@ -29,15 +29,45 @@ Application level navigation
     visibility: visible;
     transform: translateX(0);
   }
+
+  section,
+  header,
+  footer {
+    margin-bottom: 2rem;
+  }
 }
 
 
 .navigation-menu() {
-  font-size: 1.3rem;
+  font-size: 1.2rem;
+
+  h2 { 
+    font-size: 1.7rem; 
+    line-height: 1.8;
+    margin: 0;
+  }
 
   h3 { 
-    font-size: 1.4rem; 
+    font-size: 1.5rem; 
     line-height: 1.8;
+    margin: 0;
+  }
+
+  h4 { 
+    font-size: 1.4rem; 
+    line-height: 1.6;
+    margin: 0;
+  }
+
+  h5 { 
+    font-size: 1.3rem; 
+    line-height: 1.6;
+    margin: 0;
+  }
+
+  h6 { 
+    font-size: 1.2rem; 
+    line-height: 1.4;
     margin: 0;
   }
 
