--- a/src/themes/topsoil/layout.less
+++ b/src/themes/topsoil/layout.less
@@ -77,6 +77,12 @@ main {
 }
 
 
+h1, h2, h3, h4, h5, h6 {
+  i {
+    margin-right: 1rem;
+  }
+}
+
 /* Larger than desktop */
 @media (min-width: @bp-larger-than-desktop) {
 
