Fix color of text on button

--- a/src/themes/topsoil/theme.less
+++ b/src/themes/topsoil/theme.less
@@ -58,7 +58,7 @@ button,
 input[type="submit"],
 input[type="reset"],
 input[type="button"] {
-  color: @alt-text-color;
+  color: @text-color;
   border-radius: @border-radius;
   border: 1px solid @divider-color;
   .box-shadow;
