--- a/src/themes/topsoil.css
+++ b/src/themes/topsoil.css
@@ -1024,7 +1024,7 @@ button,
 input[type="submit"],
 input[type="reset"],
 input[type="button"] {
-  color: #ffffff;
+  color: #333333;
   border-radius: 0;
   border: 1px solid #b6b6b6;
   -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25);
