--- a/src/less/topsoil/theme.less
+++ b/src/less/topsoil/theme.less
@@ -151,7 +151,7 @@ textarea:focus, select:focus {
 }
 
 
-body > header {
+.app-bar {
   .box-shadow;
 
   background: @primary-color;
@@ -190,7 +190,7 @@ body > header {
   }
 }
 
-body > aside {
+.navigation-drawer {
   background-color: @canvas-color;
   border-right: 1px solid @divider-color;
 }
@@ -202,7 +202,7 @@ body > aside {
     font-size: 1.5em;
   }
 
-  body > main {
+  .active-view {
     // border-left: 2px solid @divider-color;
   }
 }
