--- a/src/less/topsoil/components/app-bar.less
+++ b/src/less/topsoil/components/app-bar.less
@@ -26,11 +26,6 @@ Provides fixed area for application title and application level actions
 
   font-size: 1.5rem; 
   line-height: 1.5;
-
-  a {
-    height: 100%;
-    padding: 0.5rem 0.5rem;
-  }
 }
 
 
@@ -69,7 +64,12 @@ Provides fixed area for application title and application level actions
     list-style: none;
     padding: 0;
     margin: 0;
+    margin-left: 1rem;
     text-align: right;
+  }
+
+  button {
+    margin-bottom: 0;
   }
 }
 
@@ -110,6 +110,18 @@ Provides fixed area for application title and application level actions
   }
 }
 
+.app-title__toggle,
+.common-actions__toggle {
+  height: 100%;
+}
+
+.app-title__toggle {
+  padding-right: 1.5rem;
+}
+
+.common-actions__toggle {
+  padding-left: 1.5rem;
+}
 
 
 /* Larger than desktop */
