--- a/src/less/topsoil/layout.less
+++ b/src/less/topsoil/layout.less
@@ -35,6 +35,11 @@ main {
   // overflow: auto;
 }
 
+.active-view {
+  // padding-left: 1rem;
+  flex: 1;
+}
+
 
 h1, h2, h3, h4, h5, h6 {
   i {
@@ -45,7 +50,7 @@ h1, h2, h3, h4, h5, h6 {
 /* Larger than desktop */
 @media (min-width: @bp-larger-than-desktop) {
 
-  // main {
-  //   flex-flow: row;
-  // }
+  .active-view {
+    padding-left: 1rem;
+  }
 }
