Add scrolling to active-view area. app-bar has better support for grouped icons

--- a/src/less/topsoil/components/navigation-drawer.less
+++ b/src/less/topsoil/components/navigation-drawer.less
@@ -15,6 +15,7 @@ Application level navigation
   // bottom: 0;
   padding: 0.5rem;
   width: 18rem;
+  overflow: auto;
 
   transform: translateX(-100%);
   visibility: hidden;
