--- a/src/less/topsoil/theme.less
+++ b/src/less/topsoil/theme.less
@@ -195,6 +195,11 @@ textarea:focus, select:focus {
   border-right: 1px solid @divider-color;
 }
 
+.status-bar {
+  border-top: 1px solid @divider-color;
+  color: @alt-text-color--subtle;
+}
+
 
 /* Larger than desktop */
 @media (min-width: @bp-larger-than-desktop) {
