--- a/src/less/topsoil/components/app-bar.less
+++ b/src/less/topsoil/components/app-bar.less
@@ -14,7 +14,7 @@ Provides fixed area for application title and application level actions
   display: flex;
   flex-flow: row;
 
-  position: fixed;
+  // position: fixed;
   top: 0;
   left: 0;
   right: 0;
@@ -53,28 +53,51 @@ Provides fixed area for application title and application level actions
 }
 
 
-.common-actions {
+.action-bar {
   display: flex;
   flex-flow: row;
   flex: 1;
   justify-content: flex-end;
   align-items: center;
-
-  ul, li {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    margin-left: 1rem;
-    text-align: right;
-  }
-
-  button {
-    margin-bottom: 0;
-  }
 }
 
 
-.common-actions__priority {
+.app-actions {
+  display: flex;
+  flex-flow: row;
+  align-items: center;
+
+  padding: 0;
+  margin: 0;
+
+  list-style: none;
+  text-align: right;
+  margin-left: 2rem;
+
+  li {
+    padding: 0;
+    margin: 0;
+
+    list-style: none;
+    display: inline-block;
+    margin-left: 1rem;
+  }
+
+  li:first-child {
+    margin-left: 0;
+  }
+
+  button, input, textarea, select {
+    margin: 0;
+  }
+}
+
+.app-actions:first-child {
+  margin-left: 0;
+}
+
+
+.app-actions__priority {
   display: flex;
   flex-flow: row;
   align-items: center;
@@ -84,13 +107,13 @@ Provides fixed area for application title and application level actions
   }
 }
 
-.common-actions__overflow {
+.app-actions__overflow {
   display: none;
 }
 
 
-.common-actions.is-expanded {
-  .common-actions__overflow {
+.action-bar.is-expanded {
+  .app-actions__overflow {
     display: flex;
     flex-flow: column;
 
@@ -105,39 +128,29 @@ Provides fixed area for application title and application level actions
     opacity: 0.9;
 
     li {
+      width: 100%;
       padding: 0.5rem;
+      text-align: right;
     }
   }
 }
 
-.app-title__toggle,
-.common-actions__toggle {
-  height: 100%;
-}
-
-.app-title__toggle {
-  padding-right: 1.5rem;
-}
-
-.common-actions__toggle {
-  padding-left: 1.5rem;
-}
 
 
 /* Larger than desktop */
 @media (min-width: @bp-larger-than-desktop) {
 
-  .app-title__toggle {
+  .app-actions__toggle {
     display: none;
   }
 
-  .common-actions.is-expanded {
-    .common-actions__overflow {
+  .action-bar.is-expanded {
+    .app-actions__overflow {
       width: 50%;
     }
   }
 
-  .common-actions__overflow {
+  .app-actions__overflow {
     display: flex;
     flex-flow: row;
     align-items: center;
@@ -145,10 +158,6 @@ Provides fixed area for application title and application level actions
     li {
       display: inline-block;  
     }
-  }
-
-  .common-actions__toggle {
-    display: none;
   }
 
 }
