Make the "main" area expand to fill the window even with little content

--- a/src/less/topsoil/layout.less
+++ b/src/less/topsoil/layout.less
@@ -34,7 +34,7 @@ body.app
 main {
   display: flex;
   flex-flow: row;
-  // flex: 1;
+  flex: 1;
 
   // padding: 6rem 1.5rem 1rem 1.5rem;
   overflow: hidden;
